[package]
name = "timepls"
version = "0.1.0"
authors = ["Jacek Chmiel <jacek@chmiel.cc>"]
edition = "2018"
description = "Converts unix timestamps to human readable date"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.116"
serde_json = "1.0.58"
clap = "2.33.3"
anyhow = "1.0.33"
chrono = "0.4.19"
